[package]
name = "bzn"
version = "0.1.1"
authors = ["Kunal Bhalla <bhalla.kunal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
chrono-tz = "0.5"
clap = "2.33.3"
html2md = "0.2.10"
regex = "1.4.2"
shellexpand = "2.0.0"
ureq = "1.5.2"
